tests/ts_extra_tests/test_ts_cases/5.2/using_declarations_and_explicit_resource_management/using_Declarations_10.ts
/*
 * Copyright (c) 2024 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
/**---
 description: >
    using Declarations and Explicit Resource Management
 lib: ESNext
 isCurrent: true
 error: { code: The left-hand side of a 'for...in' statement cannot be a 'using' declaration }
 ---*/


function func(): string | undefined {
  let obj = ['a', 'b', 'c'];

  // error: using and await using declarations are not allowed in the head of a for-in statement.
  for (using x in obj) {
    return x;
  }
}